--- a/templates/index.html
+++ b/templates/index.html
@@ -49,7 +49,7 @@
             </div>       
             <div class="block" id="block3">
                 <div>
-                    <h1></h1>
+                    <h1>{{ result }}</h1>
                     <p></p>
                 </div>
                 <div>
