--- a/static/css/index.css
+++ b/static/css/index.css
@@ -1,15 +1,15 @@
 body {
     background-color: #F7F5E7
 }
-/* Styles for circles */
+
 .container {
-display: flex;
-justify-content: center;
-align-items: center;
-height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
 }
 
-.circle {
+.circle-default {
     width: 80px;
     height: 80px;
     font-family: "Quattrocento", sans-serif;
@@ -25,7 +25,27 @@ height: 100vh;
     transition: transform 0.3s ease-out;
 }
 
-.circle:hover {
+.circle-passed {
+    width: 80px;
+    height: 80px;
+    font-family: "Quattrocento", sans-serif;
+    font-size: 24px;
+    color: #F7F5E7;
+    background-color: #a9e434;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 70px;
+    cursor: pointer;
+    transition: transform 0.3s ease-out;
+}
+
+.circle-default:hover {
+    transform: scale(1.2);          
+}
+
+.circle-passed:hover {
     transform: scale(1.2);          
 }
 
@@ -34,7 +54,7 @@ hr {
     margin: 10px;
 }
 
-.block {
+.block-default {
     display: none;
     flex-direction: column;
     align-items: center;
@@ -47,8 +67,20 @@ hr {
     transition: transform 0.3s ease-out;
 }
 
+.block-passed {
+    display: none;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin: 10px;
+    padding: 12px 10px 5px;
+    border: 1px solid #a9e434;
+    background-color: #a9e434;
+    border-radius: 5px;
+    transition: transform 0.3s ease-out;
+}
 
-.block input {
+.block-default input {
     font-size: 16px;
     margin-bottom: 5px;
     padding: 5px 2px;
@@ -56,7 +88,15 @@ hr {
     border-color: #F7F5E7;
 }
 
-#block-button {
+.block-passed input {
+    font-size: 16px;
+    margin-bottom: 5px;
+    padding: 5px 2px;
+    text-indent: 5px;
+    border-color: #F7F5E7;
+}
+
+.block-default-button {
     padding: 5px 10px;
     text-indent: 0px;
     margin-top: 5px;
@@ -68,10 +108,28 @@ hr {
     cursor: pointer;
 }
 
-#block-button:hover {
+.block-passed-button {
+    padding: 5px 10px;
+    text-indent: 0px;
+    margin-top: 5px;
+    font-size: 16px;
+    background-color: #a9e434;
+    color: #fff;
+    border: #a9e434;
+    border-radius: 2px;
+    cursor: pointer;
+}
+
+.block-default-button:hover {
     background-color: #fec97a;
     transition: all 0.2s;
 }
+
+.block-passed-button:hover {
+    background-color: #e8f8c6;
+    transition: all 0.2s;
+}
+
 
 ::placeholder {
     color: #818181;
@@ -81,3 +139,21 @@ hr {
 ::-ms-input-placeholder { /* Edge 12 -18 */
     color: #818181;
 }
+
+.block-result {
+    padding: 12px 35px 5px;
+    
+}
+
+.block-result img {
+    height: 100px;
+    width: 100px;
+    margin-bottom: 5px;
+    padding: 5px 2px;
+}
+
+.block-result h4 {
+    color: #fff;
+    padding: 5px 2px;
+}
+
