--- a/templates/index.html
+++ b/templates/index.html
@@ -81,7 +81,7 @@
             <div class="block-passed block-result" id="block3">
                 {% if result %}
                 <div>
-                    <h4>{{ result[0].upper() }} ( {{ result[1] }} )</h4>
+                    <h4>{{ result[0].upper() }} ( {{ result[1] }}/10 )</h4>
                 </div>
                 <div>
                     <img src="{{ url_for('static', filename='img/{}.png'.format(result[0])) }}" alt="img">
