--- a/static/css/index.css
+++ b/static/css/index.css
@@ -1,12 +1,18 @@
-body {
-    background-color: #F7F5E7
+* {
+    margin: 0px;
+    padding: 0px;
 }
 
 .container {
+    z-index: 1;
+    background: linear-gradient(-45deg,rgb(23, 153, 213), rgb(166, 93, 231),rgb(255, 255, 119));
+    background-size: 400% 400%;
+    width: 100%;
+    height: 100vh;
+    animation: animate 30s ease infinite;
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100vh;
 }
 
 .circle-default {
@@ -14,8 +20,9 @@ body {
     height: 80px;
     font-family: "Quattrocento", sans-serif;
     font-size: 24px;
-    color: #F7F5E7;
-    background-color: #FF9900;
+    color: white;
+    background: linear-gradient(-45deg, rgb(120, 208, 255), rgb(166, 93, 231));
+    border: 2px solid white;
     border-radius: 50%;
     display: flex;
     justify-content: center;
@@ -30,8 +37,9 @@ body {
     height: 80px;
     font-family: "Quattrocento", sans-serif;
     font-size: 24px;
-    color: #F7F5E7;
-    background-color: #a9e434;
+    color: white;
+    background: linear-gradient(-45deg, rgb(103, 255, 108), rgb(225, 255, 116), rgb(255, 252, 53));
+    border: 2px solid white;
     border-radius: 50%;
     display: flex;
     justify-content: center;
@@ -41,11 +49,7 @@ body {
     transition: transform 0.3s ease-out;
 }
 
-.circle-default:hover {
-    transform: scale(1.2);          
-}
-
-.circle-passed:hover {
+.circle-animate:hover {
     transform: scale(1.2);          
 }
 
@@ -61,99 +65,82 @@ hr {
     justify-content: center;
     margin: 10px;
     padding: 12px 10px 5px;
-    border: 1px solid #FF9900;
-    background-color: #FF9900;
-    border-radius: 5px;
-    transition: transform 0.3s ease-out;
-}
-
-.block-passed {
-    display: none;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    margin: 10px;
-    padding: 12px 10px 5px;
-    border: 1px solid #a9e434;
-    background-color: #a9e434;
+    border: 2px solid white;
+    background: linear-gradient(-45deg, rgb(106, 255, 220), rgb(23, 153, 213), rgb(166, 93, 231),rgb(255, 255, 119));
     border-radius: 5px;
     transition: transform 0.3s ease-out;
 }
 
 .block-default input {
-    font-size: 16px;
+    width: 200px;
+    font-size: 14px;
     margin-bottom: 5px;
     padding: 5px 2px;
     text-indent: 5px;
-    border-color: #F7F5E7;
-}
-
-.block-passed input {
-    font-size: 16px;
-    margin-bottom: 5px;
-    padding: 5px 2px;
-    text-indent: 5px;
-    border-color: #F7F5E7;
+    border: 1px solid white;
+    border-radius: 2px;
 }
 
 .block-default-button {
     padding: 5px 10px;
     text-indent: 0px;
     margin-top: 5px;
-    font-size: 16px;
-    background-color: #FF9900;
+    font-size: 14px;
+    background-color: transparent;
     color: #fff;
-    border: #FF9900;
-    border-radius: 2px;
-    cursor: pointer;
-}
-
-.block-passed-button {
-    padding: 5px 10px;
-    text-indent: 0px;
-    margin-top: 5px;
-    font-size: 16px;
-    background-color: #a9e434;
-    color: #fff;
-    border: #a9e434;
+    border: unset;
     border-radius: 2px;
     cursor: pointer;
 }
 
 .block-default-button:hover {
-    background-color: #fec97a;
+    background-color: white;
+    color: black;
     transition: all 0.2s;
 }
 
-.block-passed-button:hover {
-    background-color: #e8f8c6;
-    transition: all 0.2s;
-}
-
-
-::placeholder {
+.placeholder-grey input::placeholder {
     color: #818181;
     opacity: 1; /* Firefox */
 }
 
-::-ms-input-placeholder { /* Edge 12 -18 */
+.placeholder-grey input::-ms-input-placeholder { /* Edge 12 -18 */
     color: #818181;
 }
 
+.placeholder-white input::placeholder {
+    color: white;
+    opacity: 1; /* Firefox */
+}
+
+.placeholder-white input::-ms-input-placeholder { /* Edge 12 -18 */
+    color: white;
+}
+
 .block-result {
-    padding: 12px 35px 5px;
-    
+    height: 175px;
+    width: 200px;
 }
 
 .block-result img {
-    height: 100px;
     width: 100px;
-    margin-bottom: 5px;
-    padding: 5px 2px;
+    margin-top: 10px;
 }
 
 .block-result h4 {
+    width: 100%;
+    text-align: center;
     color: #fff;
-    padding: 5px 2px;
 }
 
+@keyframes animate{
+    0%{
+        background-position: 0% 50%;
+    }
+    50%{
+        background-position: 100% 50%;
+    }
+    100%{
+        background-position: 0% 50%;
+    }
+}
