--- a/templates/index.html
+++ b/templates/index.html
@@ -8,6 +8,10 @@
 
 {% block body %}
     <div class="container">
+
+        <div>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis commodi eligendi, a, molestiae unde dignissimos maxime voluptas cumque minima amet necessitatibus accusamus? Voluptate ab debitis nemo explicabo, quo voluptas expedita.</p>
+        </div>
         <!-- circle-block#1 -->
         <div>
 
