--- a/static/css/index.css
+++ b/static/css/index.css
@@ -3,16 +3,52 @@
     padding: 0px;
 }
 
-.container {
+.container-content {
     z-index: 1;
     background: linear-gradient(-45deg,rgb(23, 153, 213), rgb(166, 93, 231),rgb(255, 255, 119));
     background-size: 400% 400%;
-    width: 100%;
-    height: 100vh;
     animation: animate 30s ease infinite;
+    height: 100vh;
+}
+
+.container-content-row1 {
+   height: 30%;
+   display: flex;
+   flex-direction: column;
+   justify-content: center;
+   align-items: center;
+}
+
+.container-content-row1 p {
+    font-size: 40px;
+    font-weight: bold;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    color: white;
+    text-align: center;
+}
+
+.container-content-row1-col2 {
+    display: flex;
+    margin-top: 20px;
+    color: #fff;
+    font-size: 20px;
+    font-weight: bolder;
+}
+
+.container-content-row1-col2 div {
+    margin: 0px 10px;
+}
+
+.container-content-row2 {
     display: flex;
     justify-content: center;
     align-items: center;
+}
+
+.label-style {
+    color: white;
+    font-weight: bold;
+    margin-bottom: 5px;
 }
 
 .circle-default {
@@ -56,6 +92,7 @@
 hr {
     width: 100px;
     margin: 10px;
+    
 }
 
 .block-default {
@@ -71,7 +108,11 @@ hr {
     transition: transform 0.3s ease-out;
 }
 
-.block-default input {
+.block-default div {
+    display: flex;
+}
+
+.block-default input[type="number"] {
     width: 200px;
     font-size: 14px;
     margin-bottom: 5px;
